# bita

./: .gitignore  README.md  SUPPLEMENT_MANIFEST.md  do-not  pyproject.toml  temp-stop  ハキリバチ.R
.github/: PART_B_PR_BODY.md
configs/: four_path_parameter_envelope_contracts.json  impatiens_capensis_four_path_models.json  impatiens_randomized_fitness_models.json  impatiens_response_scale_models.json  part_b_arrow_literature_seeds.json  part_b_break_even_scenarios.json  part_b_moderator_hypotheses.json  part_i_robustness_grid.json
docs/: BACKGROUND_NOVELTY_GAP_REVIEW.md  CURRENT_REVIEW_AND_CLEANUP_PLAN_V1.md  EMPIRICAL_PIVOT_IMPATIENS_V1.md  FINAL_SUBMISSION_AUDIT.md  GENERAL_SIGN_CRITERION.md  IMPATIENS_MODEL_ADEQUACY_SENSITIVITY_V1.md  IMPATIENS_RESULTS_LOCK_V1.md  INDEPENDENT_PAPER_POSITIONING_V1.md  INTRODUCTION_BLUEPRINT.md  MANUSCRIPT_RESULTS_TABLES_V1.md  MANUSCRIPT_RESULTS_V1.md  MANUSCRIPT_RESULTS_V2.md  MANUSCRIPT_SKELETON_V1.md  MANUSCRIPT_STRENGTHENING_PLAN_V1.md  NOVELTY_POSITIONING.md  PART_B_C0_CURRENT_READOUT_V1.md  PART_B_COMPLETION_STATUS_v1.md  PART_B_CRITICAL_APPRAISAL_v1.md  PART_B_MECHANISM_META_STRATEGY_v1.md  PART_B_MULTILAYER_EVIDENCE_STRATEGY_V2.md  PART_B_STOPPING_RULE_AMENDMENTS_v1.md  PART_I_MANUSCRIPT_READOUT_V1.md  PART_I_ROBUSTNESS_PROTOCOL.md  RETIRED_EXPLORATORY_WORKFLOWS_V1.md  RETIRED_PROBE_SCRIPTS_V1.md  SUBMISSION_SCOPE.md  analysis_plan.md  broad_evidence_to_regime_interface.md  functional_trait_model_scope.md  global_network_backbone.md  part_b_b5_stratum_compatibility.md  part_i_to_big_data_decision_table.md  regime_map_model.md  (+1 more)
(+478 files in other folders)
