[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biotic-interaction-trait-architecture"
version = "0.1.0"
description = "Theory, simulation, and empirical data contracts for biotic interaction trait architecture."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
packages = ["trait_architecture"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
